fix: remove slide opacity on mobile brand carousel

--- a/src/styles/_brand-carousel.scss
+++ b/src/styles/_brand-carousel.scss
@@ -103,14 +103,7 @@
       overflow: visible;
     }
 
-    .slick-slide {
-      opacity: 0.4;
-      transition: opacity 0.4s ease;
 
-      &.slick-current {
-        opacity: 1;
-      }
-    }
   }
 
   .brand-carousel__content {
